# SAS

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLLVM.cmake  sasConfig.cmake.in  sasCreateConfig.cmake  sasMacros.cmake  test.cmake
config/: FCCSW-naming-conventions.yaml  disable-all-checkers.json
documentation/: introduction.md  options.md  report_index.md  sas_checkers.md  setup.md  using_sas.md
scripts/: ClangSasCheckerPluginRegister.cpp.in  clang.in  compile.in  naming_conventions_yaml_parser.py  report_index  report_index_functions.py  sas_apply_changes  sas_convention_generator  sas_convention_generator.py  sas_create_index  sas_modernize_format  test.py
scripts/common/: __init__.py  __init__.py.in
src/: BlackWhiteListCheckerDisabler.cpp  CMakeLists.txt  ClangSasCheckerPluginRegister.cpp  IncludeDumper.cpp  IncludeDumper.h  SasChecker.h  jsonxx.h
src/CodingConventions/FCCSW/: CMakeLists.txt  ClassNameUppercaseChecker.cpp  ClassNameUppercaseChecker.h  ConstChecker.cpp  ConstChecker.h  DataMemberChecker.cpp  DataMemberChecker.h  EnumeratorChecker.cpp  EnumeratorChecker.h  FunctionChecker.cpp  FunctionChecker.h  LocalVariableLowercaseChecker.cpp  LocalVariableLowercaseChecker.h  NamespaceChecker.cpp  NamespaceChecker.h  Rules.h  TypeChecker.cpp  TypeChecker.h
src/CodingConventions/General/: CMakeLists.txt  NoUsingNamespaceInHeaders.cpp  NoUsingNamespaceInHeaders.h
src/CodingConventions/ROOT/: CMakeLists.txt  RN9Checker.cpp
src/Example/: CMakeLists.txt
src/Performance/: ArgSizeChecker.h  CMakeLists.txt  FiniteMathChecker.cpp  FiniteMathChecker.h
src/ThreadSafety/: CMakeLists.txt
templates/: CheckerBase.cpp.template  CheckerHeader.h.template  ClangSasCheckerPluginRegister.cpp.in  DefaultIdentifier.template  RegexMatch.template  clang++.in  compile.in  report_footer.html  report_index.html.in  sas_check++.in  sas_check.in
templates/common/: __init__.py.in
templates/identifiers/: Const.template  DataMember.template  Function.template  GlobalStatic.template  LocalVariable.template  MemberStatic.template
test/: CMakeLists.txt
test/BWList/: CMakeLists.txt
test/BWList/Class/: CMakeLists.txt
test/BWList/FilePath/: CMakeLists.txt
test/BWList/Misc/: CMakeLists.txt
test/BWList/Namespace/: CMakeLists.txt
test/BWList/Struct/: CMakeLists.txt
test/CodingConventions/FCCSW/: Const.cpp  Const.h  Const.ref  DataMember.h  DataMember.ref  Function.cpp  Function.h  Function.ref  Namespace.cpp  Namespace.h  Namespace.ref  TestTypeNames.ref  Type.h
test/sas/: CMakeLists.txt
test/sas/CodingConventions/FCCSW/: CMakeLists.txt  Const.cpp  Enumerator.cpp  Function.ref  Namespace.ref  Type.cpp  Type.ref
test/sas/CodingConventions/General/: CMakeLists.txt
test/sas/CodingConventions/ROOT/: CMakeLists.txt
test/sas/Example/: CMakeLists.txt
test/sas/Performance/: CMakeLists.txt
test/sas/ThreadSafety/: CMakeLists.txt
