if(FCCSW_CHECKERS)
  add_subdirectory(CodingConventions/FCCSW)
endif()
if(ROOT_CHECKERS)
  add_subdirectory(CodingConventions/ROOT)
endif()
if(GENERAL_CHECKERS)
  add_subdirectory(CodingConventions/General)
endif()
add_subdirectory(Example)
add_subdirectory(Performance)
add_subdirectory(ThreadSafety)