if(FCCSW_CHECKERS OR ALL_CHECKERS)
  add_subdirectory(CodingConventions/FCCSW)
endif()
if(ROOT_CHECKERS OR ALL_CHECKERS)
  add_subdirectory(CodingConventions/ROOT)
endif()
if(GENERAL_CHECKERS OR ALL_CHECKERS)
  add_subdirectory(CodingConventions/General)
endif()
if(EXAMPLE_CHECKERS OR ALL_CHECKERS)
  add_subdirectory(Example)
endif()
add_subdirectory(Performance)
add_subdirectory(ThreadSafety)